@@ -1,6 +1,7 @@
 0.04
  - Add SEE ALSO section to Unicode::Block doc.
  - Add SEE ALSO section to Unicode::Block::Item doc.
+ - Rewrite unassigned unicode character to '' (blank space).
  - Update Module::Install to 1.18 version.
 
 0.03 2014-08-26T03:04:50+02:00
